--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^7.18.1",
