--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
