--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.12.4",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
@@ -21,6 +23,7 @@
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.4",
+    "youch": "^2.0.10",
     "yup": "^0.28.1"
   },
   "devDependencies": {
